src/views/snapshots/git_local_review__views__main__tests__main_view_render_with_selected_review.snap
---
source: src/views/main.rs
expression: render_app_to_terminal_backend(app)
---
"┌git-local-review──────────────────────────────────────────────────────────────┐"
"│Git Local Review - Press 'n' to create a new review, 'q' to quit              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Reviews───────────────────────────────────────────────────────────────────────┐"
"│> Review 2 (2025-01-01 01:00)                                                 │"
"│  Review 1 (2025-01-01 00:00)                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
